--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       <br />
       <p class="head">Education</p>
       <ul>
-        <li>Bachelor of Science in Computer Science, Oregon State University (Expected September 2025), GPA: 3.51</li>
+        <li><strong>Bachelor of Science in Computer Science, Oregon State University (Expected September 2025), GPA: 3.51</strong></li>
       </ul>
       <p class="head">Certifications</p>
       <ul>
-        <li>CompTIA A+ (April 2025)</li>
-        <li>CompTIA Security+ (April 2025)</li>
-        <li>CompTIA Network+ (March 2025)</li>
-        <li>Practicum by Yandex, Data Analysis (May 2023)</li>
+        <li><strong>CompTIA A+ (April 2025)</strong></li>
+        <li><strong>CompTIA Security+ (April 2025)</strong></li>
+        <li><strong>CompTIA Network+ (March 2025)</strong></li>
+        <li><strong>Practicum by Yandex, Data Analysis (May 2023)</strong></li>
       </ul>
       <p class="head">Technical Skills</p>
       <ul>
@@ -45,28 +45,28 @@
         <li>
           <strong>User Management API</strong> | Flask, AWS (Elastic Beanstalk, DynamoDB), Auth0<br>
           Secure backend service for managing authenticated users with role-based access control.<br>
-          - Developed a Flask RESTful API deployed via AWS Elastic Beanstalk, implementing Auth0 for JWT-based authentication and authorization<br>
-          - Integrated AWS DynamoDB for managing secure user data and enabling scalable, serverless storage within a RESTful architecture
+          • Developed a Flask RESTful API deployed via AWS Elastic Beanstalk, implementing Auth0 for JWT-based authentication and authorization<br>
+          • Integrated AWS DynamoDB for managing secure user data and enabling scalable, serverless storage within a RESTful architecture
         </li>
         <li>
           <strong>Reliable Data Transfer Protocol Simulator</strong> | Python<br>
           Simulated RDT over an unreliable channel with loss recovery and data integrity mechanisms.<br>
-          - Developed client and host logic to handle packet loss, corruption, timeouts, and cumulative acknowledgments, ensuring in-order delivery and data integrity<br>
-          - Implemented flow control, segment retransmission, and checksum validation in Python to emulate real-world network reliability challenges
+          • Developed client and host logic to handle packet loss, corruption, timeouts, and cumulative acknowledgments, ensuring in-order delivery and data integrity<br>
+          • Implemented flow control, segment retransmission, and checksum validation in Python to emulate real-world network reliability challenges
         </li>
         <li>
           <strong>Dealership Database</strong> | SQL, React<br>
           Full-stack inventory system featuring a PostgreSQL backend and React frontend.<br>
-          - Built a robust backend using a hosted PostgreSQL database and RESTful APIs to enable seamless CRUD operations and manage user-driven data interactions<br>
-          - Developed a responsive React frontend in a collaborative environment with dynamic forms for managing and displaying inventory data
+          • Built a robust backend using a hosted PostgreSQL database and RESTful APIs to enable seamless CRUD operations and manage user-driven data interactions<br>
+          • Developed a responsive React frontend in a collaborative environment with dynamic forms for managing and displaying inventory data
         </li>
       </ul>
       <p class="head">Additional Experience</p>
       <ul>
         <li>
           <strong>Math Tutor, Honors Review Learning Center</strong> (Feb – June 2023, Ridgewood, NJ)<br>
-          - Provided one-on-one and small group instruction, emphasizing clear communication<br>
-          - Adapted explanations to individual learning styles to ensure understanding
+          • Provided one-on-one and small group instruction, emphasizing clear communication<br>
+          • Adapted explanations to individual learning styles to ensure understanding
         </li>
       </ul>
     </div>
