removed some contact info

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <br /><br />
       <h1>Resume</h1>
       <h2>Erik Grinn</h2>
-      <p>Ridgewood, NJ • (917) 282-4749 • <a href="mailto:grinn.erik@gmail.com">grinn.erik@gmail.com</a></p>
+      <!-- <p>Ridgewood, NJ • (917) 282-4749 • <a href="mailto:grinn.erik@gmail.com">grinn.erik@gmail.com</a></p> -->
+      <p><a href="mailto:grinn.erik@gmail.com">grinn.erik@gmail.com</a></p>
       <p>
         <a href="https://linkedin.com/in/erikgrinn">LinkedIn</a> |
         <a href="https://github.com/erikgrinn">GitHub</a> |
