working visit counter with Lambda, API Gateway, and DynamoDB

--- a/index.html
+++ b/index.html
@@ -73,7 +73,18 @@
     </div>
     <div class="right"></div>
     <div id="footer">
+      <span id="visit-count"></span>
       <h2 id="name">Erik</h2>
+      <script>
+      fetch('https://jj5vzzzpc3.execute-api.us-east-1.amazonaws.com/prod/visits')
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('visit-count').textContent = `Visits: ${data.visits}`;
+        })
+        .catch(() => {
+          document.getElementById('visit-count').textContent = 'Visits: unavailable';
+        });
+      </script>
     </div>
   </body>
 </html>
