sam build, deploy, yamls, new url

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,7 +76,7 @@
       <span id="visit-count"></span>
       <h2 id="name">Erik</h2>
       <script>
-      fetch('https://jj5vzzzpc3.execute-api.us-east-1.amazonaws.com/prod/visits')
+      fetch('https://7rzvud5wuc.execute-api.us-east-1.amazonaws.com/Prod/visits')
         .then(response => response.json())
         .then(data => {
           document.getElementById('visit-count').textContent = `Visits: ${data.visits}`;
