testing frontend deploy

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <span>THIS SHOULD SHOW UP</span>
     <div id="header"></div>
     <div class="left"></div>
     <div class="stuff">
