links to blog post

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
       <p>
         <a href="https://linkedin.com/in/erikgrinn">LinkedIn</a> |
         <a href="https://github.com/erikgrinn">GitHub</a> |
-        <a href="https://erikgrinn.me">erikgrinn.me</a>
+        <a href="https://erikgrinn.me/blog/post-12/">erikgrinn.me</a>
       </p>
       <hr />
       <br />
@@ -65,7 +65,7 @@
       <p class="head">Additional Experience</p>
       <ul>
         <li>
-          <strong>Math Tutor, Honors Review Learning Center</strong> (Feb – June 2023, Ridgewood, NJ)<br>
+          <strong>Math Tutor, Honors Review Learning Center</strong> (Feb - June 2023, Ridgewood, NJ)<br>
           • Provided one-on-one and small group instruction, emphasizing clear communication<br>
           • Adapted explanations to individual learning styles to ensure understanding
         </li>
